# skills-orchestrator

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONFORMANCE.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  QUICK_START.md  README.md  SECURITY.md  SPEC.md  SUPPORT.md  TEST_REPORT.md  THIRD_PARTY_NOTICES.md  action.yml  constraints.txt  pyproject.toml  review-feedback.json  security-findings.json  security-review-context.json
.claude/: settings.json
.cursor/rules/: api-design.mdc  brainstorming.mdc  code-style.mdc  deployment-checklist.mdc  documentation.mdc  environment-setup.mdc  error-handling.mdc  finish-branch.mdc  git-commit-conventions.mdc  git-operations.mdc  git-worktrees.mdc  karpathy-guidelines.mdc  performance-optimization.mdc  pr-review.mdc  refactoring.mdc  security-review.mdc  systematic-debugging.mdc  task-estimation.mdc  tdd.mdc  writing-plans.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  external_adoption_request.md  external_pilot_request.md  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml  ghcr.yml  post-release-smoke.yml  publish.yml  scorecard.yml
config/: conflict-test.yaml  skills.yaml  test-skills.yaml
config/pipelines/: bug-fix-with-abort.yaml  full-dev.yaml  quick-fix.yaml  security-audit.yaml
docs/: CI_CD.md  INDEX.md  MCP_SERVER.md  PIPELINES.md  PIPELINE_BRANCHING.md  ZONES.md  adapters.md  adoption-authorization.md  adoption-case-study-template.md  adoption-evidence-pack.md  adoption-maturity-model.md  adoption-playbook.md  agent-fleet-governance.md  docker.md  enterprise-dashboard.md  enterprise.md  external-adoption-intake.md  external-pilot-intake.md  foundation-readiness.md  github-action.md  github-app.md  hosted-registry.md  install.md  instruction-supply-chain-roadmap.md  instruction-supply-chain-status.md  manifest-policy-exports.md  open-core-boundary.md  pilot-case-study-template.md  pilot-evidence-pack.md  pilot-outreach.md  policy-packs.md  production-adoption.md  registry-evidence.md  release-rollback.md  release-verification.md  slsa-readiness.md  supervisor-governance.md  supply-chain-verification.md  team-standardization.md  third-party-implementation.md  (+1 more)
docs/adr/: 0001-v3-commercial-boundary.md
docs/rules/: SO000.md  SO001.md  SO002.md  SO003.md  SO004.md  SO005.md  SO007.md  SO008.md  SO009.md  SO010.md  SO011.md  SO012.md  SO013.md  SO014.md  SO015.md  SO016.md  SO017.md  SO018.md  SO019.md  SO020.md
examples/: README.md
examples/adapter-evidence/: README.md  pyproject.toml
examples/adapter-negative/: README.md  pyproject.toml
examples/adoption-repos/: README.md
examples/agent-handoff/: README.md  invalid-privileged-without-human-review.json  invalid-privileged-worker.json  invalid-production-evidence.json  release-review-handoff.json
examples/agent-runtime-image/: README.md  codex-worker-image.json  invalid-floating-tag.json
examples/basic/: README.md
examples/commercial-handoff/: README.md  dashboard-rollup.json  dashboard-snapshot.json  installation.json  registry-ingest.json
examples/demo-repo/: .mcp.json  AGENTS.md  README.md  pyproject.toml
examples/external-adoption-record/: README.md  advisory-adoption-record.json
examples/external-consumer/: README.md  github-app-installation.json  hosted-registry-ingest.json  multi-repo-artifacts.json
reports/: TEST_REPORT_v2.0.1.md  TEST_REPORT_v2.0.2.md  TEST_REPORT_v2.0.3.md  TEST_REPORT_v2.0.4.md  TEST_REPORT_v2.0.5.md  TEST_REPORT_v2.0.6.md  TEST_REPORT_v2.0.7.md  TEST_REPORT_v2.0.8.md  TEST_REPORT_v2.0.9.md  TEST_REPORT_v2.1.0.md  TEST_REPORT_v2.1.1.md  TEST_REPORT_v2.3.0.md  TEST_REPORT_v2.4.0.md  TEST_REPORT_v2.5.0.md  TEST_REPORT_v2.5.1.md  TEST_REPORT_v2.6.0.md  TEST_REPORT_v3.0.0.md  TEST_REPORT_v3.0.1.md  TEST_REPORT_v3.0.2.md  TEST_REPORT_v3.0.3.md  TEST_REPORT_v3.0.4.md  TEST_REPORT_v3.0.5.md  TEST_REPORT_v3.0.6.md  TEST_REPORT_v3.1.0.md  TEST_REPORT_v3.2.0.md
scripts/: check_action_pins.py  check_docker_base_digest.py  check_pip_constraints.py  post_release_smoke.py
skills_orchestrator/: __init__.py  checker.py  conformance.py  dashboard.py  diagnostic.py  doctor.py  enforcer.py  evidence.py  evidence_index.py  explainability.py  github_pr.py  main.py  org_registry.py  reviewer.py  schema_validation.py  security.py  supply_chain.py
src/: __init__.py  enforcer.py  main.py
test-skills/: chinese-code-review.md  quick-fix.md  skill-a.md  skill-b.md  systematic-debugging.md
tests/: __init__.py  test_adapters.py  test_adoption_examples.py  test_agent_handoff_examples.py  test_agent_runtime_image_examples.py  test_checker.py  test_ci_hygiene.py  test_commercial_surfaces.py  test_compressor.py  test_conformance.py  test_content_resolver.py  test_docker_hygiene.py  test_e2e.py  test_enforcer.py  test_evidence_index.py  test_external_consumer_examples.py  test_github_pr_comment.py  test_import_cmd.py  test_init_cmd.py  test_integration.py  test_lock.py  test_main_cli.py  test_manifest_export.py  test_mcp.py  test_mcp_cli.py  test_negative_conformance_examples.py  test_parser.py  test_pilot_examples.py  test_pipeline.py  test_pipeline_branch.py  test_policy_export.py  test_policy_packs.py  test_post_release_smoke.py  test_repository_hygiene.py  test_resolver.py  test_schema_cmd.py  test_security.py  test_supply_chain.py  test_sync.py  test_version.py
(+192 files in other folders)
