[project]
name = "skills-orchestrator"
version = "3.0.3"
description = "SkillOps / instruction-supply-chain control plane for AI-agent teams: policy packs, registry, evidence bundles, SARIF/CI, and MCP runtime."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = [
    "claude",
    "agents",
    "skills",
    "mcp",
    "ai",
    "llm",
    "coding-assistant",
    "skillops",
    "sarif",
    "policy-as-code",
    "instruction-supply-chain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "jsonschema>=4.20",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/BambooGap/skills-orchestrator"
Repository = "https://github.com/BambooGap/skills-orchestrator"
"Bug Tracker" = "https://github.com/BambooGap/skills-orchestrator/issues"

[project.scripts]
skills-orchestrator = "skills_orchestrator.main:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["skills_orchestrator", "skills_orchestrator.*"]

[tool.setuptools.package-data]
"skills_orchestrator" = ["py.typed", "config/*.yaml", "schemas/*.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"
